--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,16 +12,19 @@
   "devDependencies": {
     "browser-sync": "^2.9.6",
     "del": "^2.0.2",
-    "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
-    "gulp-bower": "0.0.10",
     "gulp-changed": "^1.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
     "gulp-html-replace": "^1.5.4",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.1",
-    "main-bower-files": "^2.9.0"
+    "gulp": "^3.9.0",
+    "gulp-bower": "0.0.13",
+    "gulp-ruby-sass": "^2.0.6"
   }
 }
